# final_vinyl_project

./: README.md  alembic.ini  pyproject.toml
.docker/: docker-compose-test.yaml  docker-compose.yaml
app/: main.py  models.py  orm.py
app/integrations/postgres/: vinyl_repository.py
app/services/: vinyl_service.py
app/transport/: vinyl.py
app/transport/depends/: db.py  redis.py
app/utils/: settings.py
migrations/: env.py
migrations/versions/: 7f9d5552cbec_create_vinyl_records_table.py  ba6555da60d2_create_vinyl_table.py
tests/: conftest.py
tests/integrations/postgres/: conftest.py  vinyl_test.py
tests/services/: conftest.py  vinyl_unit_tests.py
