[project]
name = "final_vinyl_project"
version = "0.1.0"
description = ""
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "fastapi>=0.116.1",
    "hiredis>=3.2.1",
    "httpx>=0.28.1",
    "polyfactory>=2.22.2",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
    "redis>=6.4.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
